# Roco222-labs

./: journal.md  lab1 software engineering for roboticists.md  lab2 dc motor.md  lab3 Incremental Encoder.md  lab4 Controlling the motor.md  lab5 Stepper Motors.md
arm_bot_project/devel/: .catkin  .rosinstall  setup.sh
arm_bot_project/devel/lib/pkgconfig/: arm_bot.pc
arm_bot_project/devel/ros_lib/jointstate_to_plain/: Dofs.h
arm_bot_project/devel/share/arm_bot/cmake/: arm_botConfig.cmake
arm_bot_project/src/arm_bot/: CMakeLists.txt  package.xml
arm_bot_project/src/arm_bot/launch/: display.launch
arm_bot_project/src/arm_bot/meshes/: base_plate.STL  bearing.STL  claw_base.STL  claw_finger.STL  control_arm.STL  control_arm_fitter.STL  control_arm_shaft.STL  elbow_base.STL  elbow_to_wrist_shaft.STL  elbow_ver_link.STL  elbow_ver_top.STL  main_base.STL  wrist_ver.STL
arm_bot_project/src/arm_bot/meshes/servo/: servo with bit.STL  servo.STL  servo_bit_only.STL
arm_bot_project/src/arm_bot/src/arm_bot_cb/arm_bot_cb/: arm_bot_cb.ino  servo_control.cpp  servo_control.h
arm_bot_project/src/arm_bot/src/arm_bot_cpp/: arm_bot_cpp.ino  node_callback.h
arm_bot_project/src/arm_bot/src/arm_bot_deg_cpp/arm_bot_deg_cpp/: arm_bot_deg_cpp.ino  servo_control.cpp  servo_control.h
arm_bot_project/src/arm_bot/urdf/: arm_bot.urdf  arm_bot_3servo.urdf
arm_bot_project/src/jointstate_to_plain/: CMakeLists.txt
arm_bot_project/src/jointstate_to_plain/msg/: Dofs.msg
arm_bot_project/src/jointstate_to_plain/nodes/: run.py
(+1 files in other folders)
